--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -13,6 +13,8 @@
 
     <!-- Custom styles for this template -->
     <link href="{% static './base/main.css' %}" rel="stylesheet" />
+    {% block stylesheet %}
+    {% endblock %}
 </head>
 
 <body>
@@ -28,7 +30,7 @@
             <div class="nav-item text-nowrap">
                 <form action="{% url 'logout' %}" method="POST">
                     {% csrf_token %}
-                    <input type="submit" class="text text-capitalize">Sign out</input>
+                    <input type="submit" value="sign out" class="text text-capitalize">
                 </form>
             </div>
         </div>
@@ -88,10 +90,47 @@
                             </a>
                         </li>
                     </ul>
+                    <h6 class="
+                sidebar-heading
+                d-flex
+                justify-content-between
+                align-items-center
+                px-3
+                mt-4
+                mb-1
+                text-muted
+              ">
+                        <span>Settings</span>
+                        <a class="link-secondary" href="#" aria-label="Add a new report">
+                            <span data-feather="plus-circle"></span>
+                        </a>
+                    </h6>
+                    <ul class="nav flex-column mb-2">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'user_preferences' %}">
+                                <span data-feather="file-text"></span>
+                                General
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <span data-feather="file-text"></span>
+                                Account
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </nav>
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                
+                {% if messages %}
+                <ul class="messages">
+                    {% for message in messages %}
+                    <li {% if message.tags %} class="alert alert-sm alert-{{ message.tags }}" {% endif %}>
+                        {{ message }}
+                    </li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
                 {% block content %} {% endblock %}
             </main>
         </div>
