--- a/templates/expenses/index.html
+++ b/templates/expenses/index.html
@@ -1,7 +1,4 @@
 {% extends '../base/base.html' %}
-<ul class="messages">
-    {% for message in messages %}
-    <li{% if message.tags %} class="alert alert-sm alert-{{ message.tags }}" {% endif %}>{{ message }}
-        </li>
-        {% endfor %}
-</ul>
+{% block content %}
+
+{% endblock %}
