--- a/templates/expenses/index.html
+++ b/templates/expenses/index.html
@@ -1,4 +1,52 @@
 {% extends '../base/base.html' %}
+{% load static %}
 {% block content %}
+<div class="row">
+    <div class="col-md-10">
+        <nav aria-label="breadcrumb" class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item">Expenses</li>
+                </ol>
+            </div>
+        </nav>
+    </div>
+    <div class="col-md-2">
+        <a href="{% url 'add_expense' %}" class="btn btn-primary w-100 h-100">Add Expense</a>
+    </div>
+</div>
+<div class="expense-search mt-2">
+    <form>
+        <input type="text" class="form-control" id="search-input" placeholder="Search">
+    </form>
+</div>
 
+
+<div class="expense-table mt-2">
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th>Ammount</th>
+                <th>Date</th>
+                <th>Description</th>
+                <th>Category</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            <div hidden id="curr_page_num"></div>
+        </tbody>
+    </table>
+</div>
+<div class="paginator-container" style="display: flex;width: 100%; justify-content: space-between;">
+    <div id="page_num">
+    </div>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            <li class="page-item page-link" id="prev_page" style="cursor: pointer;">Previous</li>
+            <li class="page-item page-link" id="next_page" style="cursor: pointer;">Next</li>
+        </ul>
+    </nav>
+</div>
+<script src="{% static 'expenses/index.js' %}"></script>
 {% endblock %}
