--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -4,13 +4,7 @@
 <form action="{% url 'login' %}" method="POST">
     {% csrf_token %}
     <div class="title">Login</div>
-    {% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-        <li{% if message.tags %} class="alert alert-sm alert-{{ message.tags }}" {% endif %}>{{ message }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
+    {% include 'base/messages.html' %}
     <input type="text" class="form-control" name="username" id="username" placeholder="Username" />
     <input type="password" class="form-control" name="password" id="password" placeholder="password" visible="false" />
     <div class="show">show</div>
