started the income app

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -18,22 +18,25 @@
 </head>
 
 <body>
-    <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
+    <header class="navbar navbar-dark sticky-top bg-dark  p-0 shadow">
         <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">Money</a>
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false"
-            aria-label="Toggle navigation">
+            aria-label="Toggle navigation"> 
             <span class="navbar-toggler-icon"></span>
         </button>
-        <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search" />
-        <div class="navbar-nav">
-            <div class="nav-item text-nowrap">
+        <div class="header-custom">
+            <div class="">
+                <a href="#" class="text-capitalize">{{ request.user.username }}</a>
+            </div>
+            <div class="">
                 <form action="{% url 'logout' %}" method="POST">
                     {% csrf_token %}
-                    <input type="submit" value="sign out" class="text text-capitalize">
+                    <input type="submit" value="sign out" class="text-capitalize">
                 </form>
             </div>
         </div>
+        
     </header>
 
     <div class="container-fluid">
@@ -54,7 +57,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="{% url 'income' %}">
                                 <span data-feather="shopping-cart"></span>
                                 Income
                             </a>
