--- a/static/base/main.css
+++ b/static/base/main.css
@@ -117,3 +117,28 @@ body {
 
   list-style: none;
 }
+
+.header-custom{
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+  justify-content: right;
+}
+.header-custom > div{
+  margin:0%;
+  padding: 0%;
+  margin-right:1rem;
+  height: 100%;
+  
+}
+.header-custom > div > a {
+  text-decoration: none;
+  width: 100%;
+  color: white;
+}
+
+.header-custom > div > form > input{
+  background-color: rgba(0, 0, 0, 0);
+  color:white;
+  border: none;
+}
