--- a/templates/income/index.html
+++ b/templates/income/index.html
@@ -6,13 +6,13 @@
         <nav aria-label="breadcrumb" class="navbar navbar-light bg-light">
             <div class="container-fluid">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item">Expenses</li>
+                    <li class="breadcrumb-item">Income</li>
                 </ol>
             </div>
         </nav>
     </div>
     <div class="col-md-2">
-        <a href="{% url 'add_expense' %}" class="btn btn-primary w-100 h-100">Add Expense</a>
+        <a href="{% url 'add_income' %}" class="btn btn-primary w-100 h-100">Add Income</a>
     </div>
 </div>
 <div class="expense-search mt-2">
