--- a/templates/income/index.html
+++ b/templates/income/index.html
@@ -15,20 +15,20 @@
         <a href="{% url 'add_income' %}" class="btn btn-primary w-100 h-100">Add Income</a>
     </div>
 </div>
-<div class="expense-search mt-2">
+<div class="income-search mt-2">
     <form>
         <input type="text" class="form-control" id="search-input" placeholder="Search">
     </form>
 </div>
 
 
-<div class="expense-table mt-2">
+<div class="income-table mt-2">
     <table class="table table-hover">
         <thead>
             <tr>
                 <th>Ammount({{ currency }})</th>
                 <th>Date</th>
-                <th>Description</th>
+                <th>Source</th>
                 <th>Category</th>
                 <th>Action</th>
             </tr>
@@ -48,5 +48,5 @@
         </ul>
     </nav>
 </div>
-<script src="{% static 'expenses/index.js' %}"></script>
+<script src="{% static 'income/index.js' %}"></script>
 {% endblock %}
