expense page now has graphs yay

--- a/static/base/main.css
+++ b/static/base/main.css
@@ -21,21 +21,14 @@ body {
   vertical-align: text-bottom;
 }
 
-/*
-   * Sidebar
-   */
 
 .sidebar {
   position: fixed;
   top: 0;
-  /* rtl:raw:
-    right: 0;
-    */
   bottom: 0;
-  /* rtl:remove */
   left: 0;
-  z-index: 100; /* Behind the navbar */
-  padding: 48px 0 0; /* Height of navbar */
+  z-index: 100;
+  padding: 48px 0 0; 
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
 }
 
@@ -51,7 +44,7 @@ body {
   height: calc(100vh - 48px);
   padding-top: 0.5rem;
   overflow-x: hidden;
-  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+  overflow-y: auto; 
 }
 
 .sidebar .nav-link {
@@ -78,9 +71,6 @@ body {
   text-transform: uppercase;
 }
 
-/*
-   * Navbar
-   */
 
 .navbar-brand {
   padding-top: 0.75rem;
@@ -122,13 +112,17 @@ body {
   display: flex;
   flex-direction: row;
   width: 80%;
-  justify-content: right;
+  justify-content: space-between;
+  align-items: center;
 }
 .header-custom > div{
   margin:0%;
+  /* margin-top:1rem; */
   padding: 0%;
+  /* padding-top:15px; */
   margin-right:1rem;
-  height: 100%;
+  /* height: calc(100% - 1rem); */
+  /* height:35px; */
   
 }
 .header-custom > div > a {
@@ -141,4 +135,13 @@ body {
   background-color: rgba(0, 0, 0, 0);
   color:white;
   border: none;
+}
+.header-custom > div > form{
+  background-color: rgba(0, 0, 0, 0);
+  color:white;
+  border: none;
+  display: flex;
+  flex-direction: row;
+  /* justify-content: space-between; */
+  align-items: center;
 }
