--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -10,118 +10,88 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js" integrity="sha512-TW5s0IT/IppJtu76UbysrBH9Hy/5X41OTAbQuffZFU6lQ1rdcLHzpU5BzVvr/YFykoiMYZVWlr/PX1mDcfM9Qg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!-- Custom styles for this template -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"
+        integrity="sha512-TW5s0IT/IppJtu76UbysrBH9Hy/5X41OTAbQuffZFU6lQ1rdcLHzpU5BzVvr/YFykoiMYZVWlr/PX1mDcfM9Qg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link href="{% static './base/main.css' %}" rel="stylesheet" />
     {% block stylesheet %}
     {% endblock %}
 </head>
 
 <body>
+
     <header class="navbar navbar-dark sticky-top bg-dark  p-0 shadow">
-        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">Money</a>
+        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">Django-Money</a>
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false"
-            aria-label="Toggle navigation"> 
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="header-custom">
-            <div class="">
-                <a href="#" class="text-capitalize">{{ request.user.username }}</a>
+            <div class="text-white">
+                {% block breadcrumb %}
+                {% endblock %}
             </div>
-            <div class="">
-                <form action="{% url 'logout' %}" method="POST">
-                    {% csrf_token %}
-                    <input type="submit" value="sign out" class="text-capitalize">
-                </form>
+
+            <div>
+                <a href="{% url 'logout' %}" class="text-decoration-underline text-capitalize">sign out</a>
             </div>
         </div>
-        
     </header>
 
     <div class="container-fluid">
         <div class="row">
-            <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+            <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-dark sidebar">
                 <div class="position-sticky pt-3">
+                    <h6 class="sidebar-heading d-flex  px-3 mt-4 mb-1 text-muted">
+                        <span class="text-white fw-bold fs-6 text-decoration-underline">Dashboard</span>
+                    </h6>
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">
-                                <span data-feather="home"></span>
-                                Dashboard
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'expenses' %}">
-                                <span data-feather="file"></span>
+                            <a class="nav-link text-white" href="{% url 'expenses' %}">
                                 Expenses
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'income' %}">
-                                <span data-feather="shopping-cart"></span>
+                            <a class="nav-link text-white" href="{% url 'income' %}">
                                 Income
                             </a>
                         </li>
                     </ul>
 
-                    <h6 class="
-                sidebar-heading
-                d-flex
-                justify-content-between
-                align-items-center
-                px-3
-                mt-4
-                mb-1
-                text-muted
-              ">
-                        <span>Summary</span>
-                        <a class="link-secondary" href="#" aria-label="Add a new report">
-                            <span data-feather="plus-circle"></span>
-                        </a>
+                    <h6 class="sidebar-heading d-flex  px-3 mt-4 mb-1 text-muted">
+                        <span class="text-white fw-bold fs-6 text-decoration-underline">Summary</span>
                     </h6>
                     <ul class="nav flex-column mb-2">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <span data-feather="file-text"></span>
+                            <a class="nav-link text-white" href="#">
                                 Expenses Summary
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <span data-feather="file-text"></span>
+                            <a class="nav-link text-white" href="#">
                                 Income Summary
                             </a>
                         </li>
                     </ul>
-                    <h6 class="
-                sidebar-heading
-                d-flex
-                justify-content-between
-                align-items-center
-                px-3
-                mt-4
-                mb-1
-                text-muted
-              ">
-                        <span>Settings</span>
-                        <a class="link-secondary" href="#" aria-label="Add a new report">
-                            <span data-feather="plus-circle"></span>
-                        </a>
+                    <h6 class="sidebar-heading d-flex  px-3 mt-4 mb-1 text-muted">
+                        <span class="text-white fw-bold fs-6 text-decoration-underline">Settings</span>
                     </h6>
                     <ul class="nav flex-column mb-2">
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'user_preferences' %}">
-                                <span data-feather="file-text"></span>
+                            <a class="nav-link text-white" href="{% url 'user_preferences' %}">
                                 General
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <span data-feather="file-text"></span>
+                            <a class="nav-link text-white" href="#">
                                 Account
                             </a>
                         </li>
                     </ul>
+                </div>
+                <div class="fixed-bottom mb-4 ms-2 text-white">
+                    Signed in as {{ request.user }}
                 </div>
             </nav>
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 pt-2">
@@ -132,7 +102,6 @@
             </main>
         </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
