--- a/templates/income/add_income.html
+++ b/templates/income/add_income.html
@@ -1,14 +1,10 @@
 {% extends '../base/base.html' %}
+{% block breadcrumb %}
+<span class="text-capitalize">/ income / add income</span>
+{% endblock %}
 {% block content %}
 
-<nav aria-label="breadcrumb" class="navbar navbar-light bg-light">
-    <div class="container-fluid">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="{% url 'income' %}">Income</a></li>
-            <li class="breadcrumb-item">Add Income</li>
-        </ol>
-    </div>
-</nav>
+
 <div class="card mt-5">
     <div class="card-body">
         <form action="{% url 'add_income' %}" method="POST">
