--- a/templates/expenses/add_expense.html
+++ b/templates/expenses/add_expense.html
@@ -1,14 +1,9 @@
 {% extends '../base/base.html' %}
+{% block breadcrumb %}
+<span class="text-capitalize">/ expenses / add expense</span>
+{% endblock %}
 {% block content %}
 
-<nav aria-label="breadcrumb" class="navbar navbar-light bg-light">
-    <div class="container-fluid">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="{% url 'expenses' %}">Expenses</a></li>
-            <li class="breadcrumb-item">Add Expense</li>
-        </ol>
-    </div>
-</nav>
 <div class="card mt-5">
     <div class="card-body">
         <form action="{% url 'add_expense' %}" method="POST">
