--- a/templates/expenses/index.html
+++ b/templates/expenses/index.html
@@ -9,9 +9,7 @@
 {% block content %}
 <div class="d-flex flex-row">
     <div class="expense-search mt-2 flex-fill">
-        <form>
-            <input type="text" class="form-control" id="search-input" placeholder="Search">
-        </form>
+        <input type="text" class="form-control" id="search-input" placeholder="Search">
     </div>
     <a href="{% url 'add_expense' %}" class="btn btn-primary mt-2 h-50 ms-5">Add Expense</a>
 </div>
@@ -57,6 +55,8 @@
     </div>
 </div>
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"
+        integrity="sha512-TW5s0IT/IppJtu76UbysrBH9Hy/5X41OTAbQuffZFU6lQ1rdcLHzpU5BzVvr/YFykoiMYZVWlr/PX1mDcfM9Qg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="{% static 'expenses/index.js' %}"></script>
 {% endblock %}
