--- a/templates/income/edit_income.html
+++ b/templates/income/edit_income.html
@@ -1,14 +1,8 @@
 {% extends '../base/base.html' %}
+{% block breadcrumb %}
+<span class="text-capitalize">/ income / edit income</span>
+{% endblock %}
 {% block content %}
-
-<nav aria-label="breadcrumb" class="navbar navbar-light bg-light">
-    <div class="container-fluid">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="{% url 'income' %}">Income</a></li>
-            <li class="breadcrumb-item">Edit Income</li>
-        </ol>
-    </div>
-</nav>
 <div class="card mt-5">
     
     <div class="card-body">
